--- a/index.html
+++ b/index.html
@@ -56,20 +56,24 @@
             <!-- /.content -->
              <ul class="header-features">
                 <li class="header-features-item">
-                    <img src="" alt="" class="header-features-icons">
-                    <p class="header-features-text"></p>
+                    <img src="img/features/time.svg" alt="time" class="header-features-icons">
+                    <p class="header-features-text">Непрерывная работа c 2017 года</p>
                 </li>
                 <li class="header-features-item">
-                    <img src="" alt="" class="header-features-icons">
-                    <p class="header-features-text"></p>
+                    <img src="img/features/sertificate.svg" alt="sertificate" class="header-features-icons">
+                    <p class="header-features-text">Вся продукция сертифицирована</p>
                 </li>
                 <li class="header-features-item">
-                    <img src="" alt="" class="header-features-icons">
-                    <p class="header-features-text"></p>
+                    <img src="img/features/control.svg" alt="control" class="header-features-icons">
+                    <p class="header-features-text">Контроль качества на всех этапах</p>
                 </li>
                 <li class="header-features-item">
-                    <img src="" alt="" class="header-features-icons">
-                    <p class="header-features-text"></p>
+                    <img src="img/features/delivery.svg" alt="delivery" class="header-features-icons">
+                    <p class="header-features-text">Возможны поставки по всей России</p>
+                </li>
+                <li class="header-features-item">
+                    <img src="img/features/speed.svg" alt="speed" class="header-features-icons">
+                    <p class="header-features-text">Оперативное производство</p>
                 </li>
              </ul>
              <!-- /.header-features -->
