--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-light">
         <a href="./" class="header-logo">
-            <svg class="logo-svg" width="140" height="44">
+            <svg class="logo-svg">
                 <use href="img/sprite.svg#logo-light"></use>
             </svg>  
         </a>
@@ -34,7 +34,7 @@
             </li>
         </ul>
         <div class="header-phone">
-            <svg class="logo-svg" width="24" height="24">
+            <svg class="phone-icon" width="24" height="24">
                 <use href="img/sprite.svg#phone"></use>
             </svg>  
             <a href="tel:87028374810" class="header-phone-link">+7(702) 837-48-10</a>
