--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <nav class="navbar navbar-light">
+        <a href="#" class="mobile-menu-toggel">
+            <div class="mobile-menu-line"></div>
+            <div class="mobile-menu-line"></div>
+            <div class="mobile-menu-line"></div>
+        </a>
         <a href="./" class="header-logo">
             <svg class="logo-svg">
                 <use href="img/sprite.svg#logo-light"></use>
@@ -40,7 +45,12 @@
             <a href="tel:87028374810" class="header-phone-link">+7(702) 837-48-10</a>
         </div>
         <!-- /.header-phone -->
-         <button class="navbar-button button">Получить консультацию</button>
+         <button class="navbar-button button">
+            <svg class="button-icon" width="24" height="24">
+                <use href="img/sprite.svg#phone"></use>
+            </svg>
+            <span class="button-text">Получить консультацию</span>
+        </button>
     </nav>
     <!-- /.navbar -->
     <header class="header header-image">
