--- a/index.html
+++ b/index.html
@@ -10,8 +10,72 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="mobile-menu">
+        <ul class="mobile-menu-nav">
+            <li class="mobile-menu-nav-item">
+                <a href="#" class="mobile-menu-link">О компании</a>
+            </li>
+            <li class="mobile-menu-nav-item">
+                <a href="#" class="mobile-menu-link">Контрактное производство</a>
+                <ul class="mobile-submenu">
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Автомобильная химия</a>
+                    </li>
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Бытовая химия</a>
+                    </li>
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Дезинфицирующие средства</a>
+                    </li>
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Пищевые аэрозоли</a>
+                    </li>
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Косметическая продукция</a>
+                    </li>
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Краски аэрозольные</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="mobile-menu-nav-item">
+                <a href="#" class="mobile-menu-link">Собственные торговые марки</a>
+                <ul class="mobile-submenu">
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Автохимия AG-Tech</a>
+                    </li>
+                    <li class="mobile-submenu-item">
+                        <a href="#" class="mobile-submenu-link">Автохимия AP</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="mobile-menu-nav-item">
+                <a href="#" class="mobile-menu-link">Новости</a>
+            </li>
+            <li class="mobile-menu-nav-item">
+                <a href="#" class="mobile-menu-link">Контакты</a>
+            </li>
+        </ul>
+        <a href="tel:+74996861014" class="mobile-phone">+7 (499) 686-10-14</a>
+        <div class="mobile-info">
+            <img src = "img/mark.svg" class="mobile-icon" width="24" height="24"></img>
+            <address class="mobile-info-address">г. Мосвка, Холодильный пер. 4к1с8</address>
+        </div>
+        <div class="mobile-info">
+            <img src = "img/mail.svg" class="mobile-icon" width="24" height="24"></img>
+            <a href="mailto:a.dragunov@tdaliance.ru" class="mobile-info-email">a.dragunov@tdaliance.ru</a>
+        </div>
+        <div class="mobile-img">
+        <a href="./" class="mobile-img-link">
+            <img src="img/vk.svg" alt="" class="mobile-img-items">
+        </a>
+        <a href="./" class="mobile-img-link">
+            <img src="img/inst.svg" alt="" class="mobile-img-items">
+        </a>
+        </div>
+    </div>
     <nav class="navbar navbar-light">
-        <a href="#" class="mobile-menu-toggel">
+        <a href="#" class="mobile-menu-toggle">
             <div class="mobile-menu-line"></div>
             <div class="mobile-menu-line"></div>
             <div class="mobile-menu-line"></div>
