--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
 <body>
     <div class="mobile-menu">
@@ -132,39 +133,57 @@
             <div class="button">Подробнее о компании</div>
             </div>
             <!-- /.content -->
-             <ul class="header-features">
-                <li class="header-features-item">
-                    <svg class="logo-svg" width="36" height="36">
-                        <use href="img/sprite.svg#time"></use>
-                    </svg>
-                    <p class="header-features-text">Непрерывная работа c 2017 года</p>
-                </li>
-                <li class="header-features-item">
-                    <svg class="logo-svg" width="36" height="36">
-                        <use href="img/sprite.svg#sertificate"></use>
-                    </svg>
-                    <p class="header-features-text">Вся продукция сертифицирована</p>
-                </li>
-                <li class="header-features-item">
-                    <svg class="logo-svg" width="36" height="36">
+            <!-- Slider main container -->
+                <div class="swiper">
+                    <!-- Additional required wrapper -->
+                    <ul class="swiper-wrapper header-features">
+                    <!-- Slides -->
+                    <li class="swiper-slide header-features-item">
+                        <svg width="36" height="36">
+                            <use href="img/sprite.svg#time"></use>
+                        </svg>
+                        <p class="header-features-text">Непрерывная работа c 2017 года</p>
+                    </li>
+                    <li class="swiper-slide header-features-item">
+                        <svg width="36" height="36">
+                            <use href="img/sprite.svg#sertificate"></use>
+                        </svg>
+                        <p class="header-features-text">Вся продукция сертифицирова</p>
+                    </li>
+                    <li class="swiper-slide header-features-item">
+                        <svg width="36" height="36">
                         <use href="img/sprite.svg#control"></use>
                     </svg>
                     <p class="header-features-text">Контроль качества на всех этапах</p>
-                </li>
-                <li class="header-features-item">
-                    <svg class="logo-svg" width="36" height="36">
-                        <use href="img/sprite.svg#delivery"></use>
-                    </svg>
-                    <p class="header-features-text">Возможны поставки по всей России</p>
-                </li>
-                <li class="header-features-item">
-                    <svg class="logo-svg" width="36" height="36">
-                        <use href="img/sprite.svg#speed"></use>
-                    </svg>
-                    <p class="header-features-text">Оперативное производство</p>
-                </li>
-             </ul>
-             <!-- /.header-features -->
+                    </li>
+                    <li class="swiper-slide header-features-item">
+                        <svg width="36" height="36">
+                            <use href="img/sprite.svg#delivery"></use>
+                        </svg>
+                        <p class="header-features-text">Возможны поставки по всей России</p>
+                    </li>
+                    <li class="swiper-slide header-features-item">
+                        <svg width="36" height="36">
+                            <use href="img/sprite.svg#speed"></use>
+                        </svg>
+                        <p class="header-features-text">Оперативное производство</p>
+                    </li>
+                    </ul>
+                    <!-- If we need navigation buttons -->
+                    <div class="slider-buttons">
+                        <div class="slider-button-prev">
+                            <svg width="24" height="24">
+                                <use href="img/sprite.svg#arrow-prew"></use>
+                            </svg>
+                        </div>
+                        <div class="slider-button-next">
+                            <svg width="24" height="24">
+                                <use href="img/sprite.svg#arrow-next"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    
+                </div>
          </div>
          <!-- /.container -->
          <!-- /.header-content -->
@@ -173,8 +192,12 @@
         <div class="container">
             <div class="seporator"></div>
             <h2 class="section-title">схема работы</h2>
-            <ol class="steps">
-                <li class="steps-item">
+
+            <div class="swiper-steps">
+                <!-- Additional required wrapper -->
+                <ul class="swiper-wrapper steps">
+                  <!-- Slides -->
+                  <li class="swiper-slide steps-item">
                     <span class="steps-num">01</span>
                     <h3 class="steps-title">Знакомство</h3>
                     <p class="steps-text">
@@ -182,35 +205,51 @@
                         позволяет оценить значение форм воздействия.
                     </p>
                     <a href="#" class="steps-link">Оставить заявку</a>
-                </li>
-                <li class="steps-item">
+                  </li>
+                  <li class="swiper-slide steps-item">
                     <span class="steps-num">02</span>
                     <h3 class="steps-title">Заключение договора</h3>
                     <p class="steps-text">
                         Лишь интерактивные прототипы призваны к ответу.
                     </p>
-                </li>
-                <li class="steps-item">
+                  </li>
+                  <li class="swiper-slide steps-item">
                     <span class="steps-num">03</span>
                     <h3 class="steps-title">Производство</h3>
                     <p class="steps-text">
                         А также стремящиеся вытеснить традиционное производство, нанотехнологии 
                         функционально разнесены на независимые элементы.
                     </p>
-                </li>
-                <li class="steps-item">
+                  </li>
+                  <li class="swiper-slide steps-item">
                     <span class="steps-num">04</span>
                     <h3 class="steps-title">Доставка</h3>
                     <p class="steps-text">
                         В частности, экономическая повестка сегодняшнего дня говорит о 
                         возможностях приоритизации разума над эмоциями.
                     </p>
-                </li>
-            </ol>
+                  </li>
+                </ul>
+                <!-- If we need navigation buttons -->
+                <div class="slider-steps-buttons">
+                    <div class="slider-steps-button-prev">
+                        <svg width="24" height="24">
+                            <use href="img/sprite.svg#arrow-prew"></use>
+                        </svg>
+                    </div>
+                    <div class="slider-steps-button-next">
+                        <svg width="24" height="24">
+                            <use href="img/sprite.svg#arrow-next"></use>
+                        </svg>
+                    </div>
+                </div>
+              
+              </div>
         </div>
         <!-- /.container -->
     </section>
     <!-- /.section section-light -->
+     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/js.js"></script>
 </body>
 </html>
