--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         </ul>
         <a href="tel:+74996861014" class="mobile-phone">+7 (499) 686-10-14</a>
         <div class="mobile-info">
-            <img src = "img/mark.svg" class="mobile-icon" width="24" height="24"></img>
+            <img src = "img/mark.svg" class="mobile-icon" width="24" height="24" alt="mobile-icon">
             <address class="mobile-info-address">г. Мосвка, Холодильный пер. 4к1с8</address>
         </div>
         <div class="mobile-info">
-            <img src = "img/mail.svg" class="mobile-icon" width="24" height="24"></img>
+            <img src = "img/mail.svg" class="mobile-icon" width="24" height="24" alt="mobile-icon">
             <a href="mailto:a.dragunov@tdaliance.ru" class="mobile-info-email">a.dragunov@tdaliance.ru</a>
         </div>
         <div class="mobile-img">
