--- a/index.html
+++ b/index.html
@@ -252,7 +252,59 @@
         <!-- /.container -->
     </section>
     <!-- /.section section-light -->
-     <script src="js/swiper-bundle.min.js"></script>
+     <section class="section-production">
+        <div class="container">
+            <div class="seporator"></div>
+            <h2 class="section-title">Контрактное производство</h2>
+            <div class="cards">
+                <a href="#" class="card">
+                    <div class="card-content">
+                       <h3 class="card-title">Автомобильная химия</h3>
+                        <p class="card-text">Безусловно, сплочённость команды профессионалов позволяет оценить значение форм воздействия.</p> 
+                    </div>
+                    <img src="/img/avto-him.png" alt="Автомобильная химия" class="card-image">
+                </a>
+                <a href="#" class="card">
+                    <div class="card-content">
+                        <h3 class="card-title">Бытовая химия</h3>
+                        <p class="card-text">А также стремящиеся вытеснить традиционное производство, нанотехнологии функционально разнесены на независимые элементы.</p>
+                    </div>
+                    <img src="img/bit-him.png" alt="Бытовая химия" class="card-image">
+                </a>
+                <a href="#" class="card">
+                    <div class="card-content">
+                        <h3 class="card-title">Дезинфицирующие средства</h3>
+                        <p class="card-text">Лишь интерактивные прототипы призваны к ответу.</p>
+                    </div>
+                    <img src="img/dezinfect.png" alt="Дезинфицирующие средства" class="card-image">
+                </a>
+                <a href="#" class="card">
+                    <div class="card-content">
+                        <h3 class="card-title">Пищевые аэрозоли</h3>
+                        <p class="card-text">Безусловно, сплочённость команды профессионалов позволяет оценить значение форм воздействия.</p>
+                    </div>
+                    <img src="img/dezinfect.png" alt="Пищевые аэрозоли" class="card-image">
+                </a>
+                <a href="#" class="card">
+                    <div class="card-content">
+                        <h3 class="card-title">Косметическая продукция</h3>
+                        <p class="card-text">Лишь интерактивные прототипы призваны к ответу.</p>
+                    </div>
+                    <img src="img/avto-him.png" alt="Косметическая продукция" class="card-image">
+                </a>
+                <a href="#" class="card">
+                    <div class="card-content">
+                        <h3 class="card-title">Краски аэрозольные</h3>
+                        <p class="card-text">А также стремящиеся вытеснить традиционное производство, нанотехнологии функционально разнесены на независимые элементы.</p>  
+                    </div>
+                    <img src="img/bit-him.png" alt="Краски аэрозольные" class="card-image">
+                </a>
+            </div>
+            <!-- /.cards -->
+
+        </div>
+     </section>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/js.js"></script>
 </body>
 </html>
