--- a/index.html
+++ b/index.html
@@ -304,6 +304,33 @@
 
         </div>
      </section>
+     <section class="section-trademark">
+        <div class="container">
+            <div class="seporator"></div>
+            <h2 class="section-title">Cобственные марки</h2>
+            <div class="trademark-cards">
+                <div class="trademark-card">
+                    <svg width="180" height="180">
+                        <use href="img/sprite.svg#AGTECH" class="trademark-card-logo"></use>
+                    </svg>
+                    <h3 class="trademark-card-title">Автохимия AG-Tech</h3>
+                    <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, 
+                        рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+                </div>
+                <div class="trademark-card">
+                    <svg width="180" height="180">
+                        <use href="img/sprite.svg#AP" class="trademark-card-logo"></use>
+                    </svg>
+                    <h3 class="trademark-card-title">Автохимия AP</h3>
+                    <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, 
+                        рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+                </div>
+            </div>
+
+        </div>
+     </section>
+
+
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/js.js"></script>
 </body>
