--- a/index.html
+++ b/index.html
@@ -310,16 +310,16 @@
             <h2 class="section-title">Cобственные марки</h2>
             <div class="trademark-cards">
                 <div class="trademark-card">
-                    <svg width="180" height="180">
-                        <use href="img/sprite.svg#AGTECH" class="trademark-card-logo"></use>
+                    <svg  class="trademark-card-logo">
+                        <use href="img/sprite.svg#AGTECH" ></use>
                     </svg>
                     <h3 class="trademark-card-title">Автохимия AG-Tech</h3>
                     <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, 
                         рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
                 </div>
                 <div class="trademark-card">
-                    <svg width="180" height="180">
-                        <use href="img/sprite.svg#AP" class="trademark-card-logo"></use>
+                    <svg class="trademark-card-logo">
+                        <use href="img/sprite.svg#AP" ></use>
                     </svg>
                     <h3 class="trademark-card-title">Автохимия AP</h3>
                     <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, 
