--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -326,6 +326,132 @@
                         рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
                 </div>
             </div>
+
+        </div>
+     </section>
+     <section class="section founder">
+        <img src="img/founder.jpg" alt="founder" class="founder-photo">
+        <div class="container">
+            <div class="founder-content-wrapper">
+                <div class="founder-content">
+                    <div class="seporator"></div>
+                    <h2 class="section-title">Отношение к делу и клиентам</h2>
+                    <p class="founder-text">Кстати, интерактивные прототипы описаны максимально подробно. Повседневная 
+                        практика показывает, что укрепление и развитие внутренней структуры говорит о возможностях 
+                        соответствующих условий активизации. Внезапно, независимые государства, которые представляют 
+                        собой яркий пример континентально-европейского типа политической культуры, будут подвергнуты 
+                        целой серии независимых исследований. С учётом сложившейся международной обстановки, синтетическое
+                        тестирование выявляет срочную потребность системы массового участия.
+                        А ещё действия представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию,
+                        в равной степени предоставлены сами себе. Не следует, однако, забывать, что выбранный нами 
+                        инновационный путь в значительной степени обусловливает важность дальнейших направлений 
+                        развития.
+                    </p>
+                        <a href="#" class="steps-link">Подробнее о компании</a>
+                </div>
+            </div>
+        </div>
+     </section>
+     <section class="section clients">
+        <div class="container">
+            <div class="seporator"></div>
+            <div class="clients-wrapper">
+              <div class="clients-content">
+                <h2 class="section-title">Производим аэрозольную продукцию для разных сфер</h2>
+                <ul class="clients-list">
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#him" ></use>
+                        </svg>
+                        Химические производства
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#car" ></use>
+                        </svg>
+                        Автомойки
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#eat" ></use>
+                        </svg>
+                        Пищевая продукция
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#brush" ></use>
+                        </svg>
+                        Лаки и краски
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#cosmetic" ></use>
+                        </svg>
+                        Косметические средства
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#car-cosm" ></use>
+                        </svg>
+                        Автомобильная косметика
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#shirt" ></use>
+                        </svg>
+                        Косметика по уходу за одеждой
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#boots" ></use>
+                        </svg>
+                        Косметика по уходу за обувью
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#bricks" ></use>
+                        </svg>
+                        Строительные материалы
+                    </li>
+                    <li class="clients-list-item">
+                        <svg width="30" height="30" class="clients-list-icon">
+                            <use href="img/sprite.svg#more" ></use>
+                        </svg>
+                        И многих других
+                    </li>
+                </ul>
+              </div> 
+              <div class="clients-logo-list">
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+                <div class="clients-logo-item">
+                    <img src="/img/client.png" alt="" class="clients-logo">
+                </div>
+              </div> 
+            </div>
+            
 
         </div>
      </section>
