--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
                   </li>
                 </ul>
                 <!-- If we need navigation buttons -->
-                <div class="slider-steps-buttons">
-                    <div class="slider-steps-button-prev">
+                <div class="slider-steps-buttons primary-buttons-wrapper">
+                    <div class="slider-steps-button-prev primary-button-prev">
                         <svg width="24" height="24">
                             <use href="img/sprite.svg#arrow-prew"></use>
                         </svg>
                     </div>
-                    <div class="slider-steps-button-next">
+                    <div class="slider-steps-button-next primary-button-next">
                         <svg width="24" height="24">
                             <use href="img/sprite.svg#arrow-next"></use>
                         </svg>
@@ -422,39 +422,82 @@
                 </ul>
               </div> 
               <div class="clients-logo-list">
-                <div class="clients-logo-item">
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
-                <div class="clients-logo-item">
+                </a>
+                <a href="#" class="clients-logo-item">
                     <img src="/img/client.png" alt="" class="clients-logo">
-                </div>
+                </a>
               </div> 
             </div>
-            
-
         </div>
      </section>
+    <section class="section blog">
+        <div class="container">
+        <div class="seporator"></div>
+        <h2 class="section-title">Блог экспертов в области производства</h2>
+        <!-- Slider main container -->
+        <div class="swiper blog-slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+            <!-- Slides -->
+                <a href="#" class="swiper-slide blog-card">
+                    <img src="img/blog/pexels-pixabay.png" alt="" class="blog-card-image">
+                    <h3 class="blog-card-title">Сложно сказать, почему жизнь прекрасна</h3>
+                    <p class="blog-card-text">Сложно сказать, почему элементы политического процесса функционально разнесены на независимые элементы. Безусловно, высокотехнологичная...</p>
+                </a>
+                <a href="#" class="swiper-slide blog-card">
+                    <img src="img/blog/pexels.png" alt="" class="blog-card-image">
+                    <h3 class="blog-card-title">Современная методология разработки одухотворила всех причастных</h3>
+                    <p class="blog-card-text">Действия представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию, в равной степени предоставлены...</p>
+                </a>
+                <a href="#" class="swiper-slide blog-card">
+                    <img src="img/blog/pexels-pixabay.png" alt="" class="blog-card-image">
+                    <h3 class="blog-card-title">Сложно сказать, почему жизнь прекрасна</h3>
+                    <p class="blog-card-text">Сложно сказать, почему элементы политического процесса функционально разнесены на независимые элементы. Безусловно, высокотехнологичная...</p>
+                </a>
+            </div>
+            <div class="blog-slider-footer">
+                <a href="#" class="button-link">Весь блог</a>
+                <div class="blog-buttons primary-buttons-wrapper">
+                    <div class="blog-button-prev primary-button-prev">
+                        <svg width="24" height="24">
+                            <use href="img/sprite.svg#arrow-prew"></use>
+                        </svg>
+                    </div>
+                    <div class="blog-button-next primary-button-next">
+                        <svg width="24" height="24">
+                            <use href="img/sprite.svg#arrow-next"></use>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+
 
 
     <script src="js/swiper-bundle.min.js"></script>
