--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
-<body>
+<body class="front-page">
     <div class="mobile-menu">
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-nav-item">
@@ -85,7 +85,7 @@
             <svg class="logo-svg logo-light">
                 <use href="img/sprite.svg#logo-light"></use>
             </svg> 
-            <svg class="logo-svg logo">
+            <svg class="logo-svg logo-dark">
                 <use href="img/sprite.svg#logo"></use>
             </svg> 
         </a>
